<resources>

    <string name="ad_banner_id">@string/lib_crs_admob_banner_id</string>
    <string name="ad_native_id">@string/lib_crs_admob_native_id</string>
    <string name="ad_full_id">@string/lib_crs_admob_full_id</string>

    <string name="app_name">Music Editor</string>
    <string name="more_app">More app</string>
    <string name="studio">Studio</string>
    <string name="recorder">Recorder</string>
    <string name="converter">Converter</string>
    <string name="merger_audio">Merger audio</string>
    <string name="audio_cutter">Audio Cutter</string>
    <string name="ads">Advertiment</string>
    <string name="save">Save</string>
    <string name="quality">Quality</string>
    <string name="format">Format</string>
    <string name="input_format">Input Format</string>
    <string name="output_format">Output Format</string>
    <string name="bitrate">Bitrate</string>
    <string name="search">Search</string>
    <string name="loading">Loading...</string>
    <string name="can_not_play_this_file">Can not play this file!</string>
    <string name="decoding">Decoding</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="file_name_empty">File name can not be empty!</string>
    <string name="startRecord">Start record</string>
    <string name="record">Record</string>
    <string name="recording">Recording...</string>
    <string name="stopRecord">Stopped record!</string>
    <string name="cutter">Cutter</string>
    <string name="merger">Merger</string>
    <string name="create_file">Create file</string>
    <string name="detail">Detail</string>
    <string name="delete_file">Delete</string>
    <string name="rename">Rename</string>
    <string name="set_as">Set as ringtone</string>
    <string name="open_file_with">Open file with</string>
    <string name="title_audio">Title</string>
    <string name="path">Path</string>
    <string name="duration">Duration</string>
    <string name="size">Size</string>
    <string name="date_time">Date time</string>
    <string name="fail_rename">Rename failed!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_this_record">Are you sure want to delete this file?</string>
    <string name="select_file">Select file</string>
    <string name="sort">Sort</string>
    <string name="please_choose_file">Please choose files you want to merger!</string>
    <string name="name_file_exist">File name is exist, please try again!</string>
    <string name="file_is_too_small">File is too small, can not save file !</string>
    <string name="error">Error</string>
    <string name="you_need_to_have">You need to have at least 2 file</string>
    <string name="checked_all">Check all</string>
    <string name="delete_record">Delete</string>
</resources>
