<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/btn_title"
        style="@style/button_detail"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/title_audio"
        android:textColor="#fff"
        android:textSize="@dimen/font_size_xlarge" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/btn_open_file"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/_12sdp">

        <ImageView
            android:id="@+id/iv_open_file_with"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_folder_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_open_file_with"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:text="@string/open_file_with"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/iv_open_file_with"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/btn_rename"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/_12sdp">

        <ImageView
            android:id="@+id/iv_rename"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_edit_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_rename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:text="@string/rename"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/iv_rename"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/_12sdp">

        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_share_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:text="@string/share"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/iv_share"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/btn_detail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/_12sdp">

        <ImageView
            android:id="@+id/iv_detail"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_info_outline_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:text="@string/detail"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/iv_detail"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/_12sdp">

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_delete_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:text="@string/delete_file"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/iv_delete"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>