<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground"
    tools:context=".activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorToolbar"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/app_name"></android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/view_ads"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/v"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/v"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toTopOf="@+id/view">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/view_cutter"
            style="@style/BG_Icon_Main">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/custom_rectange" />

            <ImageView
                android:id="@+id/iv_cutter"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:src="@drawable/ic_cutter"
                app:layout_constraintBottom_toTopOf="@+id/tv_cutter"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_cutter"
                style="@style/Text"
                android:text="@string/audio_cutter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_cutter" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/view_merger"
            style="@style/BG_Icon_Main">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/custom_rectange" />

            <ImageView
                android:id="@+id/iv_merger"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:src="@drawable/ic_merger"
                app:layout_constraintBottom_toTopOf="@+id/tv_merger"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_merger"
                style="@style/Text"
                android:text="@string/merger_audio"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_merger" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/view_converter"
            style="@style/BG_Icon_Main">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/custom_rectange" />

            <ImageView
                android:id="@+id/iv_converter"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:src="@drawable/ic_conver"
                app:layout_constraintBottom_toTopOf="@+id/tv_converter"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_converter"
                style="@style/Text"
                android:text="@string/converter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_converter" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fl_ad_banner">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/view_recorder"
            style="@style/BG_Icon_Main">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/custom_rectange" />

            <ImageView
                android:id="@+id/iv_recorder"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:src="@drawable/ic_recor"
                app:layout_constraintBottom_toTopOf="@+id/tv_studio"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_studio"
                style="@style/Text"
                android:text="@string/recorder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_recorder" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/view_studio"
            style="@style/BG_Icon_Main">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/custom_rectange" />

            <ImageView

                android:id="@+id/iv_studio"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:src="@drawable/ic_studio"
                app:layout_constraintBottom_toTopOf="@+id/tv_more_app"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_more_app"
                style="@style/Text"
                android:text="@string/studio"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_studio" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/view_more_app"
            style="@style/BG_Icon_Main">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/custom_rectange" />

            <ImageView

                android:id="@+id/iv_more_app"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:src="@drawable/ic_more_png"
                app:layout_constraintBottom_toTopOf="@+id/tv_me"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_me"
                style="@style/Text"
                android:text="@string/more_app"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_more_app" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_ad_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent">

    </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/view_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/fl_ad_banner"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>