<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground"
    android:clickable="true"
    android:focusable="true">


    <ImageView
        android:id="@+id/iv_thumb_music"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:background="#85000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#29000000"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/converter">

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_play"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:src="@drawable/ic_play_arrow_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_thumb_music"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:text="00:00"
        android:textColor="#fff"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_play"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_play" />

    <TextView
        android:id="@+id/tv_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_20sdp"
        android:text="10:00"
        android:textColor="#fff"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_play"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_play" />

    <LinearLayout
        android:id="@+id/view_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_7sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginRight="@dimen/_14sdp"
        app:layout_constraintBottom_toTopOf="@+id/iv_play"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.v7.widget.AppCompatSeekBar
            android:id="@+id/seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_artist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_7sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:gravity="center_horizontal"
        android:text="Andiez"
        android:textColor="@color/text_color_select"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toTopOf="@+id/view_seekbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_song"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:gravity="center_horizontal"
        android:text="Hãy yêu cô ấy cho đúng cách"
        android:textColor="#fff"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@+id/tv_artist"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:id="@+id/devider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_thumb_music" />

    <ImageView
        android:id="@+id/iv_convert"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_14sdp"
        android:src="@drawable/ic_btn_suffle"
        app:layout_constraintBottom_toBottomOf="@+id/devider"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/devider" />

    <TextView
        android:id="@+id/tv_title_input_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:text="@string/input_format"
        android:textColor="@color/text_color_select"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_convert" />

    <TextView
        android:id="@+id/tv_input_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:text="mp3"
        android:textColor="#fff"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintLeft_toRightOf="@+id/tv_title_input_format"
        app:layout_constraintTop_toBottomOf="@+id/iv_convert" />

    <View
        android:id="@+id/devider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/text_color_select"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_input_format" />

    <TextView
        android:id="@+id/tv_output_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:text="@string/output_format"
        android:textColor="@color/text_color_select"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/devider2" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_format"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_output_format">

    </android.support.v7.widget.RecyclerView>

    <View
        android:id="@+id/devider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/text_color_select"
        app:layout_constraintTop_toBottomOf="@+id/rv_format" />

    <TextView
        android:id="@+id/tv_bitrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:text="@string/bitrate"
        android:textColor="@color/text_color_select"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/devider3" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_bitrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bitrate">

    </android.support.v7.widget.RecyclerView>
</android.support.constraint.ConstraintLayout>